# receipt-convert

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
